Update convention schema and implementation details
